# ATI_Instaleur

./: .gitignore  ATI_Instaleur.code-workspace  ATI_Instaleur.spec  pyproject.toml  test_blender_config.py  test_custom_install_paths.py  test_default_version_index.py  test_detection_debug.py  test_dialog.py  test_direct.py  test_factorized_config.py  test_factorized_simple.py  test_maya_mobu_versions.py  test_simulation.py  test_simulation_direct.py  test_simulation_minimal.py  test_simulation_simple.py  test_versions.py  test_versions_simple.py
.claude/: settings.local.json
.stfolder/: syncthing-folder-1e2cc7.txt  syncthing-folder-a3c284.txt
app/: __main__.py
app/config/: __init__.py  config.yaml  title_bar_buttons.py
app/config/CGI/: Blender.yaml  Houdini.yaml  Mari.yaml  Maya.yaml  MotionBuilder.yaml  Nuke.yaml  Unity.yaml  UnrealEngine5.yaml
app/config/Communication/: Discord.yaml
app/config/Developpement/: Git.yaml  TortoiseGit.yaml  VS_Code.yaml  VisualStudio.yaml
app/config/Graphisme/: Adobe.yaml  PureRef.yaml
app/config/Utilitaires/: DJV.yaml  FileZilla.yaml  PowerToys.yaml  SyncTrazor.yaml
app/config/hook/: __init__.py  resolve_buttons_config.py
app/core/: YamlLoader.py  __init__.py  config_loader.py
app/core/actions/: __init__.py  title_bar_menu_action.py
app/core/installer/: __init__.py  install_paths.py  main_installer.py  simulation.py  status_checker.py  windows_package_detector.py
app/hook/: __init__.py  environment.py  resolve_icon.py
app/ui/: __init__.py
app/utils/: __init__.py  admin_elevation.py  resource_manager.py
(+39 files in other folders)
