[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ATI_Instaleur"
version = "0.1.0"
description = "ChatBoteMultimodel"
authors = [
  { name = "Selixy", email = "selixy.dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "PySide6",
  "PyYAML>=6.0",
  "opencv-python-headless",

  "PySide6-Addons",
  "PySideSix-Frameless-Window",
  "pyinstaller>=6.15"
]

[tool.setuptools.packages.find]
where = ["app"]
